hphp/hack/test/extended_reasons/class_subtyping_invariant.php.diff.exp
--- control

+++ test

@@ -1,19 +1,11 @@

 error: Typing[4110] Invalid argument [1]
 -> Expected Sub [2]
-->   via this generic T2 [3]
--> But got Super [4]
--> This type argument to MyA must match exactly (it is invariant) [4]
+-> But got Super [3]
 
 hphp/hack/test/extended_reasons/class_subtyping_invariant.php:14:14
-     3 | class MyA<+Tco, -Tcontra, Tinv> {}
-     4 | 
-[3]  5 | class MyB<-T1, T2> extends MyA<Sub, T1, T2> {}
-     6 | 
-     7 | class Super {}
-     8 | 
      9 | class Sub extends Super {}
     10 | 
-[4] 11 | function takes_my_a(MyA<Sub, Super, Super> $_): void {}
+[3] 11 | function takes_my_a(MyA<Sub, Super, Super> $_): void {}
     12 | 
 [2] 13 | function subtype_bad_invariant(MyB<Super, Sub> $x): void {
 [1] 14 |   takes_my_a($x);